--- a/contrib/debian/changelog
+++ b/contrib/debian/changelog
@@ -1,3 +1,9 @@
+dynamiccoin (0.10.2-utopic) utopic; urgency=medium
+
+  * New upstream release.
+
+ -- Four TwentyTwo <fourtwentytwo@yandex.com> Thu, 18 Jun 2015 01:11:00 +0000
+
 bitcoin (0.9.3-precise1) precise; urgency=medium
 
   * New upstream releases.
